[build-system]
requires = ["setuptools >= 72.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rankingbot"
version = "0.0.0"
dependencies = [
  "mwclient==0.11.0",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
  "flake8",
  "pytest",
  "pytest-cov",
]

[project.scripts]
rankingbot = "rankingbot:main"

[tool.setuptools.packages.find]
exclude = ["tmp"]
